# hexapod_project

./: README.md
articles/CLAWAR 2018/: мотивация.txt
articles/IJAER 2018/: Aleksei Panchenko. Hexapod with articulated body.docx  IEEE format template.docx
codebase/: CMakeLists.txt  README.md
codebase/control_dlls/: CMakeLists.txt
codebase/control_dlls/flying_sphere/: CMakeLists.txt
codebase/control_dlls/step_cycle/: CMakeLists.txt
codebase/control_dlls/step_cycle/src/: step_cycle.cpp
codebase/corelibs/: CMakeLists.txt
codebase/corelibs/leg/: CMakeLists.txt  leg.h
codebase/corelibs/step/: CMakeLists.txt  step.h
codebase/corelibs/step/src/: step.cpp
codebase/prj.control_dlls/: CMakeLists.txt
codebase/prj.control_dlls/articulated_dll/: CMakeLists.txt  articulated_controls.json  articulated_controls_to_delete.json
codebase/prj.control_dlls/articulated_dll/src/: articulated_dll.cpp
codebase/prj.control_dlls/flying_sphere/: CMakeLists.txt
codebase/prj.control_dlls/flying_sphere/src/: flying_sphere.cpp
codebase/prj.control_dlls/flying_sphere_dll/: CMakeLists.txt
codebase/prj.control_dlls/flying_sphere_dll/src/: flying_sphere_dll.def
codebase/prj.control_dlls/mozaik_control_dll/: CMakeLists.txt
codebase/prj.control_dlls/mozaik_control_dll/src/: mozaik_control_dll.cpp
codebase/prj.control_dlls/pose_test_dll/: CMakeLists.txt
codebase/prj.control_dlls/pose_test_dll/src/: pose_test_dll.cpp
codebase/prj.control_dlls/step_cycle/: CMakeLists.txt
codebase/prj.control_dlls/step_cycle_dll/: CMakeLists.txt
codebase/prj.control_dlls/step_cycle_dll/src/: step_cycle_dll.cpp
codebase/prj.control_dlls/test_hexapod/: CMakeLists.txt
codebase/prj.control_dlls/test_hexapod/src/: test_hexapod.cpp
codebase/prj.control_dlls/test_hexapod_dll/: CMakeLists.txt
codebase/prj.control_dlls/test_hexapod_dll/src/: test_hexapod_dll.cpp
codebase/prj.corelibs/: CMakeLists.txt
codebase/prj.corelibs/articulated/: CMakeLists.txt  articulated.h
codebase/prj.corelibs/articulated/src/: Clhex_articulated_climb2.hpp  articulated.cpp
codebase/prj.corelibs/body/: CMakeLists.txt  body.h
codebase/prj.corelibs/body/src/: body.cpp
codebase/prj.corelibs/control/: CMakeLists.txt
codebase/prj.corelibs/control/task/: CMakeLists.txt  task.h
codebase/prj.corelibs/control/task/src/: task.cpp
codebase/prj.corelibs/control/task_queue/: CMakeLists.txt  task_queue.h
codebase/prj.corelibs/control/task_queue/src/: task_queue.cpp
codebase/prj.corelibs/dummy/: CMakeLists.txt  dummy.h
codebase/prj.corelibs/graph/: CMakeLists.txt  graph.h
codebase/prj.corelibs/graph/src/: graph.cpp
codebase/prj.corelibs/joint/: CMakeLists.txt  joint.h
codebase/prj.corelibs/joint/src/: joint.cpp
codebase/prj.corelibs/leg/: CMakeLists.txt  leg.h
codebase/prj.corelibs/leg/src/: leg.cpp
codebase/prj.corelibs/linear_player/: CMakeLists.txt  linear_player.h
codebase/prj.corelibs/linear_player/src/: linear_player.cpp
codebase/prj.corelibs/mozaik/: CMakeLists.txt  Clmozaik_2014 - рабочая версия 3х2 с функциями без ног.hpp  Clmozaik_2014 - рабочая версия для 4х4.hpp  Clmozaik_2014 - рабочая версия с поворотом и сдвигом корпуса.hpp  Clmozaik_2014 - рабочая версия с функциями.hpp  Clmozaik_2014 - рабочая версия.hpp  Clmozaik_2014.hpp  Clmozaik_2014.new  mozaik.h
codebase/prj.corelibs/mozaik/src/: mozaik.cpp
codebase/prj.corelibs/pid/: CMakeLists.txt  pid.h
codebase/prj.corelibs/pid/src/: pid.cpp
codebase/prj.corelibs/pose/: CMakeLists.txt  pose.h
codebase/prj.corelibs/pose/src/: pose.cpp
codebase/prj.corelibs/robot/: CMakeLists.txt  robot.h
codebase/prj.corelibs/robot/src/: robot.cpp
codebase/prj.corelibs/segment/: CMakeLists.txt  segment.h
codebase/prj.corelibs/segment/src/: segment.cpp
codebase/prj.corelibs/simple_body/: CMakeLists.txt  simple_body.h
codebase/prj.corelibs/simple_body/src/: simple_body.cpp
codebase/prj.corelibs/step/: CMakeLists.txt  step.h
codebase/prj.corelibs/step/src/: step.cpp
codebase/prj.corelibs/trajectory/: CMakeLists.txt  trajectory.h
codebase/prj.corelibs/trajectory/src/: trajectory.cpp
codebase/prj.scripts/matlab/: alpha_equal_zero.m  alpha_equal_zero_phase1.m  alpha_equal_zero_phase2.m  alpha_equal_zero_phase2_k1.m  alpha_not_zero.m  alpha_not_zero_phase1.m  case1_k.m  cone.m  jacobian_for_leg.m  koryanov.m  koryanov_2.m  parametric_curve.m  reactions.m  reactions_phase2.m  reactions_phase_2.m
codebase/prj.scripts/pose/: pose.py
codebase/prj.tests/: CMakeLists.txt
codebase/prj.tests/articulated_test/: CMakeLists.txt
codebase/prj.tests/articulated_test/src/: articulated_test.cpp
codebase/prj.tests/graph_test/: CMakeLists.txt
codebase/prj.tests/graph_test/src/: graph_test.cpp
codebase/prj.tests/joint_test/: CMakeLists.txt
codebase/prj.tests/joint_test/src/: joint_test.cpp
codebase/prj.tests/leg_test/: CMakeLists.txt
codebase/prj.tests/leg_test/src/: leg_test.cpp
codebase/prj.tests/linear_player_test/: CMakeLists.txt
codebase/prj.tests/linear_player_test/src/: linear_player_test.cpp
codebase/prj.tests/mozaik_test/: CMakeLists.txt
codebase/prj.tests/mozaik_test/src/: mozaik_test.cpp
codebase/prj.tests/pose_test/: CMakeLists.txt
codebase/prj.tests/pose_test/src/: pose_test.cpp
codebase/prj.tests/robot_test/: CMakeLists.txt
codebase/prj.tests/robot_test/src/: robot_test.cpp
codebase/prj.tests/segment_test/: CMakeLists.txt
codebase/prj.tests/segment_test/src/: segment_test.cpp
codebase/prj.tests/single_leg/: CMakeLists.txt
codebase/prj.tests/single_leg/src/: single_leg_test.cpp
codebase/prj.tests/step_cycle/: CMakeLists.txt
codebase/prj.tests/step_cycle_test/: CMakeLists.txt
codebase/prj.tests/step_cycle_test/src/: step_cycle_test.cpp
codebase/prj.tests/task_queue_test/: CMakeLists.txt
codebase/prj.tests/task_queue_test/src/: task_queue_test.cpp
codebase/prj.tests/trajectory_test/: CMakeLists.txt
codebase/prj.tests/trajectory_test/src/: trajectory_test.cpp
codebase/tests/: CMakeLists.txt
codebase/tests/single_leg/: CMakeLists.txt
codebase/tests/step_cycle/: CMakeLists.txt
(+115 files in other folders)
