add_subdirectory(articulated)
add_subdirectory(body)
add_subdirectory(dummy)
add_subdirectory(joint)
add_subdirectory(leg)
add_subdirectory(mozaik)
add_subdirectory(pid)
add_subdirectory(pose)
add_subdirectory(robot)
add_subdirectory(segment)
add_subdirectory(simple_body)
add_subdirectory(step)
add_subdirectory(trajectory)