add_subdirectory(body)
add_subdirectory(dummy)
add_subdirectory(joint)
add_subdirectory(leg)
add_subdirectory(pid)
add_subdirectory(pose)
add_subdirectory(robot)
add_subdirectory(segment)
add_subdirectory(step)
add_subdirectory(trajectory)
add_subdirectory(linear_player)
add_subdirectory(graph)
add_subdirectory(control)
