add_subdirectory(articulated_test)
add_subdirectory(leg_test)
add_subdirectory(step_cycle_test)
add_subdirectory(robot_test)
add_subdirectory(pose_test)
add_subdirectory(trajectory_test)
add_subdirectory(segment_test)
add_subdirectory(joint_test)
add_subdirectory(mozaik_test)
add_subdirectory(graph_test)
add_subdirectory(linear_player_test)
